--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
+    "@angular/animations": "4.1.3",
     "@angular/common": "5.0.3",
     "@angular/compiler": "5.0.3",
     "@angular/compiler-cli": "5.0.3",
@@ -34,6 +35,7 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "^2.2.1",
     "ionic-angular": "3.9.2",
+    "ionic-tooltips": "^2.0.1",
     "ionic2-rating": "^1.2.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.2",
