--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@ionic-native/sqlite": "^4.5.3",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
-    "cordova-android": "~7.0.0",
+    "cordova-android": "^6.1.1",
     "cordova-browser": "~5.0.3",
     "cordova-plugin-device": "^2.0.1",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
