--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "@ionic-native/sqlite": "^4.5.3",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
-    "cordova-android": "^6.1.1",
     "cordova-browser": "~5.0.3",
     "cordova-plugin-device": "^2.0.1",
+    "cordova-plugin-fcm": "^2.1.2",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -42,7 +42,8 @@
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "uk.co.workingedge.cordova.plugin.sqliteporter": "^1.0.2",
-    "zone.js": "0.8.18"
+    "zone.js": "0.8.18",
+    "cordova-android": "~6.1.1"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.8",
@@ -58,7 +59,8 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
       "uk.co.workingedge.cordova.plugin.sqliteporter": {},
-      "cordova-plugin-statusbar": {}
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-fcm": {}
     },
     "platforms": [
       "browser",
