--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@angular/http": "5.0.3",
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
+    "@aspnet/signalr": "^1.0.0-rc1-update1",
     "@ionic-native/core": "4.4.0",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/sqlite": "^4.5.3",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
+    "cordova-android": "~6.1.1",
     "cordova-browser": "~5.0.3",
     "cordova-plugin-device": "^2.0.1",
     "cordova-plugin-fcm": "^2.1.2",
@@ -42,8 +44,7 @@
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "uk.co.workingedge.cordova.plugin.sqliteporter": "^1.0.2",
-    "zone.js": "0.8.18",
-    "cordova-android": "~6.1.1"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.8",
