--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/animations": "4.1.3",
+    "@angular/animations": "^6.0.1",
     "@angular/common": "5.0.3",
     "@angular/compiler": "5.0.3",
     "@angular/compiler-cli": "5.0.3",
@@ -22,21 +22,25 @@
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
     "@aspnet/signalr": "^1.0.0-rc1-update1",
+    "@firebase/app-types": "^0.3.1",
+    "@firebase/auth-types": "^0.3.2",
     "@ionic-native/core": "4.4.0",
     "@ionic-native/splash-screen": "4.4.0",
-    "@ionic-native/sqlite": "^4.5.3",
+    "@ionic-native/sqlite": "^4.7.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
-    "cordova-android": "~6.1.1",
+    "angularfire2": "5.0.0-rc.4",
+    "cordova-android": "^6.1.2",
     "cordova-browser": "~5.0.3",
-    "cordova-plugin-device": "^2.0.1",
+    "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-fcm": "^2.1.2",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
-    "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-statusbar": "^2.4.1",
+    "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-sqlite-storage": "^2.2.1",
+    "cordova-sqlite-storage": "^2.3.1",
+    "firebase": "4.8.0",
     "ionic-angular": "3.9.2",
     "ionic-tooltips": "^2.0.1",
     "ionic2-rating": "^1.2.2",
