--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@firebase/app-types": "^0.3.1",
     "@firebase/auth-types": "^0.3.2",
     "@ionic-native/core": "4.4.0",
+    "@ionic-native/social-sharing": "^4.7.0",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/sqlite": "^4.7.0",
     "@ionic-native/status-bar": "4.4.0",
@@ -39,7 +40,9 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-x-socialsharing": "^5.4.0",
     "cordova-sqlite-storage": "^2.3.1",
+    "es6-promise-plugin": "^4.2.2",
     "firebase": "4.8.0",
     "ionic-angular": "3.9.2",
     "ionic-tooltips": "^2.0.1",
@@ -65,7 +68,8 @@
       "cordova-plugin-ionic-keyboard": {},
       "uk.co.workingedge.cordova.plugin.sqliteporter": {},
       "cordova-plugin-statusbar": {},
-      "cordova-plugin-fcm": {}
+      "cordova-plugin-fcm": {},
+      "cordova-plugin-x-socialsharing": {}
     },
     "platforms": [
       "browser",
