--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@ionic/storage": "2.1.3",
     "angularfire2": "5.0.0-rc.4",
     "cordova-android": "^6.1.2",
-    "cordova-browser": "~5.0.3",
+    "cordova-browser": "5.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-fcm": "^2.1.2",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
