--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@aspnet/signalr": "^1.0.0-rc1-update1",
     "@firebase/app-types": "^0.3.1",
     "@firebase/auth-types": "^0.3.2",
+    "@ionic-native/barcode-scanner": "^4.7.0",
     "@ionic-native/core": "4.4.0",
     "@ionic-native/social-sharing": "^4.7.0",
     "@ionic-native/splash-screen": "4.4.0",
@@ -31,23 +32,23 @@
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
     "angularfire2": "5.0.0-rc.4",
-    "cordova-android": "^6.1.2",
+    "cordova-android": "7.0.0",
     "cordova-browser": "5.0.3",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-fcm": "^2.1.2",
-    "cordova-plugin-ionic-keyboard": "^2.0.5",
+    "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-x-socialsharing": "^5.4.0",
-    "cordova-sqlite-storage": "^2.3.1",
+    "cordova-sqlite-storage": "^2.3.2",
     "es6-promise-plugin": "^4.2.2",
     "firebase": "4.8.0",
     "ionic-angular": "3.9.2",
     "ionic-tooltips": "^2.0.1",
     "ionic2-rating": "^1.2.2",
     "ionicons": "3.0.0",
+    "phonegap-plugin-barcodescanner": "^8.0.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "uk.co.workingedge.cordova.plugin.sqliteporter": "^1.0.2",
@@ -68,8 +69,10 @@
       "cordova-plugin-ionic-keyboard": {},
       "uk.co.workingedge.cordova.plugin.sqliteporter": {},
       "cordova-plugin-statusbar": {},
-      "cordova-plugin-fcm": {},
-      "cordova-plugin-x-socialsharing": {}
+      "cordova-plugin-x-socialsharing": {},
+      "phonegap-plugin-barcodescanner": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      }
     },
     "platforms": [
       "browser",
