--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/http": "5.0.3",
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
-    "@aspnet/signalr": "^1.0.0-rc1-update1",
+    "@aspnet/signalr": "1.0.0-rc1-final",
     "@firebase/app-types": "^0.3.1",
     "@firebase/auth-types": "^0.3.2",
     "@ionic-native/barcode-scanner": "^4.7.0",
@@ -56,6 +56,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.8",
+    "@ionic/lab": "1.0.9",
     "typescript": "2.4.2"
   },
   "description": "An Ionic project",
